--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-,idea
+
+# intellij
+/.idea
+/.settings
 
 # Package Files #
 *.jar
@@ -23,3 +26,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+**/target/
