--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/stevenrskelton/aws-lambda-s3-xz</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
